<resources>
    <string name="app_name">Home Today</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="name_wrong">Invalid name</string>
    <string name="email_wrong">Invalid email</string>
    <string name="age_wrong">Invalid age</string>
    <string name="password_wrong">Invalid password</string>
    <string name="confirm_password_wrong">Invalid confirmed password</string>
    <string name="not_match_password_and_confirm_password_wrong">Password must match confirm password</string>
    <string name="longer_than_6_chars">Enter a password longer than 6 characters</string>
    <string name="main">Main</string>
    <string name="chat">Chat</string>
    <string name="favourite">Favorite</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="location">Location</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="your_favourites">Your Favorites</string>
    <string name="rooms">Rooms</string>
    <string name="floor">Floor</string>
    <string name="square_meter">Square Meter</string>
    <string name="entering_date">Entering Date</string>
    <string name="total_building_floors">Total Building Floors</string>
    <string name="parkings">Parkings</string>
    <string name="facilities">Facilities:</string>
    <string name="air_conditioner">Air Conditioner</string>
    <string name="elevator">Elevator</string>
    <string name="storeroom">Storeroom</string>
    <string name="balcony">Balcony</string>
    <string name="mamad">Residential Secure Space (Mamad)</string>
    <string name="kosher_kitchen">Kosher Kitchen</string>
    <string name="renovated">Renovated</string>
    <string name="furnished">Furnished</string>
    <string name="chat_with_seller">Chat with Seller</string>
    <string name="hello">Hello,</string>
    <string name="category">1) Category</string>
    <string name="for_rental">For Rental</string>
    <string name="for_sale">For Sale</string>
    <string name="property_address">2) Property Address</string>
    <string name="city">" City"</string>
    <string name="address">Address</string>
    <string name="property_info">3) Property Info</string>
    <string name="rooms_number">Rooms Number</string>
    <string name="property_facilities">Property Facilities:</string>
    <string name="price_and_date">4) Price and Date</string>
    <string name="post_apartment">Post Apartment</string>
    <string name="favourites">Favorites</string>
    <string name="chats">Chats</string>
    <string name="asking_price">Asking Price:</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="unfavourite">Unfavorite</string>
    <string name="entering_date2">Entering Date:</string>
    <string name="full_name">Full Name</string>
    <string name="insert_city_name">Insert City Name</string>
    <string name="offer">Offers</string>
    <string name="age">Age</string>
    <string name="guest">Guest Mode</string>
    <string name="required">*Required</string>
    <string name="ads_opened">Ads Opened</string>
    <string name="israel_israeli">Israel Israeli</string>
    <string name="unknown">Unknown</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="agas_3">" Agas 3"</string>
    <string name="add_pictures">Add Pictures</string>
    <string name="error">Error :</string>
    <string name="unable_to_sign_in">Unable to Sign In</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="failed_to_upload">Failed to upload</string>
    <string name="is_already_in_fav">is already in favourites</string>
    <string name="added">has been added</string>
    <string name="to_favourites">to favorites</string>
    <string name="removed_from_fav">Removed From Favourites</string>
    <string name="undo">Undo</string>
    <string name="this_is_our_offer">This is your offer!</string>
    <string name="something_wrong">Something Went Wrong</string>
    <string name="removed">Removed</string>
    <string name="from_fav">From Favorites</string>
    <string name="are_you_sure_delete">Are you sure you want to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_exit">Are you sure to want to exit?</string>
    <string name="image_uploaded">Image Uploaded.</string>
    <string name="you_are_not_logged_in">You are not logged in</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="budget">Budget (Max Price)</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="please_fill_all_values">Please fill all the details about your offer</string>
    <string name="for1">for</string>
    <string name="has_been_created">has been created!</string>
    <string name="my_profile">My Profile</string>
    <string name="successfully_signed_out">Successfully signed out</string>
    <string name="unable_to_sign_out">Unable to Sign Out</string>
    <string name="log_in_to_assign_profile_picture">Log in to assign profile picture</string>
    <string name="none">None</string>
    <string name="uploading_image">Uploading Image...</string>
    <string name="just_a_moment">Just a moment...</string>
    <string name="name_required">Full name is required!</string>
    <string name="age_required">Age is required!</string>
    <string name="email_required">Email is required!</string>
    <string name="sub_menu">Sub menu</string>
    <string name="menu">Menu</string>
    <string name="single_offer">Offer</string>
    <string name="sign_out">Signing out...</string>
    <string name="update_token_failed">Unable to update token</string>
    <string name="pictures">5) Pictures</string>


</resources>