<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/edit_profile_dialog_round"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/primary"
            android:textSize="39sp"
            android:shadowColor="@color/white"
            android:shadowRadius="20"
            android:fontFamily="@font/aharoni_boldt"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:textColor="@color/primary"
            android:fontFamily="@font/aharoni_boldt"
            android:textStyle="bold"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            app:helperText="@string/required"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:helperTextTextColor="#C50303"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_5sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="@color/primary"
            android:fontFamily="@font/aharoni_boldt"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:helperText="@string/required"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:helperTextTextColor="#C50303"
            app:endIconMode="password_toggle"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_5sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="@color/primary"
            android:fontFamily="@font/aharoni_boldt"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            app:helperText="@string/required"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_blue_location_on_24"
            app:helperTextTextColor="#C50303"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_5sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auto_complete_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:padding="15dp"
            android:text="@string/confirm_changes"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/aharoni_boldt"
            android:background="@drawable/edit_profile_log_out_buttons" />

    </LinearLayout>
</LinearLayout>